# dbt-doris

./: .gitignore  .pre-commit-config.yaml  .sqlfluff  .yamllint.yml  README.md  pyproject.toml
dbt/adapters/doris/: __init__.py  __version__.py  column.py  connections.py  doris_column_item.py  impl.py  relation.py
dbt/include/doris/: __init__.py  dbt_project.yml  profile_template.yml  sample_profiles.yml
dbt/include/doris/macros/adapters/: columns.sql  freshness.sql  metadata.sql  relation.sql  relations.sql  schema.sql
dbt/include/doris/macros/materializations/incremental/: helpers.sql  incremental.sql  validate.sql
dbt/include/doris/macros/materializations/partition/: helpers.sql  partition.sql
dbt/include/doris/macros/materializations/seed/: helpers.sql
dbt/include/doris/macros/materializations/snapshot/: snapshot.sql  strategies.sql
dbt/include/doris/macros/materializations/table/: create.sql  create_table.sql  table.sql
dbt/include/doris/macros/materializations/view/: create_view.sql  create_view_as.sql  view.sql
docker/: README.md  dev.Dockerfile
tests/: conftest.py
tests/functional/adapter/: test_basic.py
